# rust-launch

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  deny.toml  rust-toolchain.toml  rustfmt.toml
common/: Cargo.toml
common/config/: Cargo.toml
common/config/src/: lib.rs
common/context/: Cargo.toml
common/context/src/: context.rs  postgres.rs
common/kube/: Cargo.toml
common/kube/src/: lib.rs
common/kube/tests/: mod.rs
common/logger/: Cargo.toml
common/logger/src/: logger_env.rs  logger_trace.rs
common/logger/tests/: lab.rs
common/src/: constants.rs  lib.rs
common/util/: Cargo.toml
common/util/src/: err.rs  lib.rs  rsp.rs
common/version/: Cargo.toml
common/version/src/: constants.rs  lib.rs  rsp.rs
common/version/tests/: demo.rs
container/: Dockerfile.gnu  Dockerfile.multi  Dockerfile.musl
crates/: Cargo.toml
crates/boot/: Cargo.toml
crates/boot/src/: main.rs
crates/common/: Cargo.toml
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/context/: Cargo.toml
crates/context/src/: lib.rs  postgres.rs
crates/data_store/: Cargo.toml
crates/data_store/src/: lib.rs
crates/data_store/tests/: builder.rs  delete.rs  generated_code.rs  get_field_names.rs  insert.rs  query.rs  select.rs  struct.rs  transaction.rs  update.rs
crates/kube/: Cargo.toml
crates/kube/src/: lib.rs
crates/kube/tests/: mod.rs  pod_example.json
crates/logger/: Cargo.toml
crates/logger/examples/: logger-cli.rs
crates/logger/src/: lib.rs  logger_env.rs  logger_trace.rs
crates/logger/tests/: lab.rs
crates/router/: Cargo.toml
crates/router/src/: context.rs  health_check.rs  lib.rs
crates/router/tests/: demo.rs  test_router.rs
crates/util/: Cargo.toml
crates/utils/: Cargo.toml
crates/utils/src/: err.rs  lib.rs
migrations/: 20240904111207_create_users_table.sql
scripts/: load_k8s_client.sh  sqlx-cli.sh
src/: lib.rs  main.rs  router.rs
src/handler/http/: system.rs
src/router/: auth.rs  mod.rs
src/service/: system.rs
src/utils/: build.rs  health_check.rs  mod.rs
tests/: async.rs  decode.rs  demo.rs
