[package]
name = "rust_boot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
axum.workspace = true
logger.workspace = true
anyhow.workspace = true
tracing.workspace = true
router.workspace = true
config.workspace = true
context.workspace = true

[dev-dependencies]
sqlx.workspace = true
chrono.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true


[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"

[workspace.dependencies]
logger = { path = "crates/logger" }
kube = { path = "crates/kube" }
utils = { path = "crates/utils" }
context = { path = "crates/context" }
config = { path = "crates/config" }
router = { path = "crates/router" }

tokio = { version = "1.33.0", features = ["full"] }
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
axum = { version = "0.7.5", features = ["macros", "ws"] }
reqwest = { version = "0.12.2", features = [
    "json",
    "multipart",
    "stream",
    "blocking",
    "rustls-tls",
] }

log = "0.4.8"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-appender = "0.2.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
chrono = { version = "0.4.19", features = ["serde"] }

anyhow = { version = "1.0.79", features = ["std"] }
thiserror = "1.0.56"
sqlx = { version = "0.8.2", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "chrono",
] }
delay_timer = "0.11.5"
dotenv = "0.15.0"
base64 = "0.22.1"
toml = "0.8.14"
rustls-pemfile = "2.1.2"
native-tls = "0.2.12"
futures-util = { version = "0.3.29", default-features = false, features = [
    "async-await",
    "sink",
    "std",
] }
libc = "0.2.155"

regex = "1.10.6"
arc-swap = "1.7.1"
once_cell = "1.19.0"
env_logger = "0.11.3"
sysinfo = "0.31.4"
num-format = "0.4.4"

# Use openssl, get more ssl support
# kube-runtime = { version = "0.93.1", package = "kube", default-features = false, features = ["client", "openssl-tls"] }
kube-runtime = { version = "0.93.1", package = "kube", features = ["client", "runtime", "derive"] }
k8s-openapi = { version = "0.22.0", features = ["latest"] }
rustls = { version = "0.23.10", features = ["ring"] }


[build-dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
