[package]
name = "kube"
version = "0.1.0"
edition = "2021"

[dependencies]
common.workspace = true
logger.workspace = true
util.workspace = true
# Use openssl, get more ssl support
# kube-runtime = { version = "0.93.1", package = "kube", default-features = false, features = ["client", "openssl-tls"] }
kube-runtime = { version = "0.93.1", package = "kube", features = ["client", "runtime", "derive"] }
k8s-openapi = { version = "0.22.0", features = ["latest"] }
rustls = { version = "0.23.10", features = ["ring"] }
