[package]
name = "logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common.workspace = true
log = "0.4.8"
tracing = "0.1.40"
tracing-subscriber = { version="0.3.18", features = ["env-filter"] }
env_logger = "0.11.3"
serde = { version = "1.0", features = ["derive"] }

