[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.33.0", features = ["full"] }
axum = { version = "0.7.5", features = ["macros", "ws"] }
log = "0.4.8"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-appender = "0.2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
chrono = { version = "0.4.19", features = ["serde"] }
reqwest = { version = "0.12.2", features = [
    "json",
    "multipart",
    "stream",
    "blocking",
    "rustls-tls",
] }
anyhow = { version = "1.0.79", features = ["std"] }
thiserror = "1.0.56"
sqlx = { version = "0.7.4", features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "chrono",
] }
sqlx-postgres = "0.7.0"
async-trait = "0.1.77"
delay_timer = "0.11.5"
dotenv = "0.15.0"
base64 = "0.22.1"
toml = "0.8.14"
rustls = "0.23.10"
rustls-pemfile = "2.1.2"
native-tls = "0.2.12"
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
futures-util = { version = "0.3.29", default-features = false, features = [
    "async-await",
    "sink",
    "std",
] }
