[package]
name = "lib"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.33.0", features = ["full"] }
axum = "0.7.5"
log = "0.4.8"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
chrono = { version = "0.4.19", features = ["serde"] }
reqwest = { version = "0.12.2", features = [
    "json",
    "multipart",
    "stream",
    "blocking",
] }
anyhow = { version = "1.0.79", features = ["std"] }
thiserror = "1.0.56"
sqlx = { version = "0.7.4", features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "chrono",
] }
sqlx-postgres = "0.7.0"
async-trait = "0.1.77"
delay_timer = "0.11.5"
dotenv = "0.15.0"
