[package]
name = "kube"
version = "0.1.0"
edition = "2021"

[dependencies]
logger.workspace = true
utils.workspace = true
kube-runtime.workspace = true
k8s-openapi.workspace = true
rustls.workspace = true
anyhow.workspace = true
dotenv.workspace = true
tracing.workspace = true
native-tls.workspace = true

[dev-dependencies]
tokio.workspace = true
reqwest.workspace = true
axum.workspace = true
serde_json.workspace = true
toml.workspace = true
