[package]
name = "logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
env_logger.workspace = true
log.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
axum.workspace = true
tokio.workspace = true
tracing-appender.workspace = true
libc.workspace = true
anyhow.workspace = true
