[package]
name = "router"
version = "0.1.12"
edition = "2021"

[dependencies]
tokio.workspace = true
kube.workspace = true
config.workspace = true
context.workspace = true
anyhow.workspace = true
axum.workspace = true
tracing.workspace = true
utils.workspace = true
serde_json.workspace = true
sysinfo.workspace = true
num-format.workspace = true

[dev-dependencies]
tokio.workspace = true
reqwest.workspace = true

